1) removed Offering 2) added tests for balanceActivityService 3) added tests for balanceService