@@ -2,7 +2,10 @@ package com.dtrade;
 
 import com.dtrade.model.account.Account;
 import com.dtrade.model.balanceactivity.BalanceActivity;
+import com.dtrade.model.coinpayment.CoinPayment;
 import com.dtrade.model.tradeorder.TradeOrder;
+import com.dtrade.repository.balance.BalanceRepository;
+import com.dtrade.repository.balanceactivity.BalanceActivityRepository;
 import com.dtrade.service.impl.AccountService;
 import com.dtrade.service.impl.BalanceActivityService;
 import org.junit.Assert;
@@ -35,17 +38,23 @@ public class BalanceActivityTest extends BaseTest {
     @Autowired
     private AccountService accountService;
 
+
+    @Autowired
+    private BalanceActivityRepository balanceActivityRepository;
+
     //TODO make more complicated checks
     @Transactional
     @WithUserDetails(value = F_DEFAULT_TEST_ACCOUNT)
-    //@Test
+    @Test
     public void testCreateBalanceActivities(){
-      // Pair<BalanceActivity, BalanceActivity> pair =createTestBalanceActivities();
-       //Assert.assertNotNull(pair);
+        Pair<TradeOrder, TradeOrder> pair =createTestBalanceActivities();
+        Assert.assertNotNull(pair);
+        Assert.assertNotNull(pair.getFirst());
+        Assert.assertNotNull(pair.getSecond());
     }
 
     @Transactional
-    public void createTestBalanceActivities(){
+    public Pair<TradeOrder, TradeOrder> createTestBalanceActivities(){
         Account buyer = accountService.getCurrentAccount();
         Account seller = accountService.findByMail("test@test.com");
 
@@ -54,32 +63,66 @@ public class BalanceActivityTest extends BaseTest {
 
         balanceActivityService.createBalanceActivities(buyer, seller, buyOrder,
                 sellOrder,  sellOrder.getAmount(), sellOrder.getPrice());
+
+        return Pair.of(buyOrder, sellOrder);
     }
 
     @Transactional
     @WithUserDetails(value = F_DEFAULT_TEST_ACCOUNT)
-    //@Test
+    @Test
     public void testGetAccountBalanceActivities(){
-        /*
-        Pair<BalanceActivity, BalanceActivity> pair = createTestBalanceActivities();
+
+        Pair<TradeOrder, TradeOrder> pair = createTestBalanceActivities();
+
+        List<BalanceActivity> buyActivities = balanceActivityRepository.findAllByBuyOrder(pair.getFirst());
+        List<BalanceActivity> sellActivities = balanceActivityRepository.findAllByBuyOrder(pair.getSecond());
 
         Page<BalanceActivity> balanceActivities = balanceActivityService.getAccountBalanceActivities(0);
 
         List<BalanceActivity> filtered = balanceActivities.getContent().stream().
-                filter((balanceActivity)->
-                    balanceActivity.getId().equals(pair.getFirst().getId()) || balanceActivity.getId().equals(pair.getSecond().getId()))
+                filter(ac->
+                        {
+                            long counter = balanceActivities.stream()
+                                   .filter(ba -> ba.getId().equals(ac.getId())).count();
+                            counter += balanceActivities.stream()
+                                   .filter(ba -> ba.getId().equals(ac.getId())).count();
+                            return counter > 0;
+                        })
                 .collect(Collectors.toList());
 
-        Assert.assertTrue(filtered.size() == 1);
-        BalanceActivity buyActivity = pair.getFirst();
-        Assert.assertTrue( buyActivity.equals(filtered.get(0)));*/
+        Assert.assertTrue(filtered.size() > 0);
+        Assert.assertTrue( buyActivities.contains(filtered.get(0)));
+
+        Page<BalanceActivity> activities = balanceActivityService.findAll(0);
+        Assert.assertTrue( buyActivities.contains(activities.getContent().get(0)));
+    }
+
+
+    @Transactional
+    @WithUserDetails(value = F_DEFAULT_TEST_ACCOUNT)
+    @Test
+    public void testCreateDepositBalanceActivity(){
+        CoinPayment coinPayment = new CoinPayment();
+        balanceActivityService.createDepositBalanceActivity(coinPayment);
+
     }
 
     @Transactional
     @WithUserDetails(value = F_DEFAULT_TEST_ACCOUNT)
-   //@Test
+    @Test
+    public void testCreateWithdrawBalanceActivity(){
+
+        CoinPayment coinPayment = new CoinPayment();
+        balanceActivityService.createWithdrawBalanceActivity(coinPayment);
+
+    }
+
+
+    /*
+    @Transactional
+    @WithUserDetails(value = F_DEFAULT_TEST_ACCOUNT)
+    @Test
     public void testBalanceAcitivtyCreated(){
-       /*
         Pair<BalanceActivity, BalanceActivity> pair = createTestBalanceActivities();
         Page<BalanceActivity> rereadBalanceActivities = balanceActivityService.getAccountBalanceActivities(0);
         long count =
@@ -87,6 +130,7 @@ public class BalanceActivityTest extends BaseTest {
              (balanceActivity.equals(pair.getFirst()) || balanceActivity.equals(pair.getSecond()))
         ).count();
 
-        Assert.assertTrue(count == 1);*/
+        Assert.assertTrue(count == 2);
     }
+    */
 }
